Sat Feb 22 18:50:35 1997  Richard Basch  <basch@lehman.com>

	* Makefile.in: Use some of the new library list build rules in
		win-post.in

Fri Feb  7 07:12:52 1997  Richard Basch  <basch@lehman.com>

	* Makefile.in (all-unix, all-mac): Create shared directory
		before trying to build the object files

Thu Jan 30 21:43:19 1997  Richard Basch  <basch@lehman.com>

	* cbc_cksum.c
		Change functions to take const args where possible

Thu Nov 21 00:58:04 EST 1996    Richard Basch   <basch@lehman.com>

        * Makefile.in: Win32 build

Sat Feb  8 18:49:39 1997  Tom Yu  <tlyu@mit.edu>

	* Makefile.in:
	* configure.in: Update to new program build procedure.

Sun Dec 29 21:53:49 1996  Tom Yu  <tlyu@mit.edu>

	* Makefile.in:
	* configure.in: Update to use new library building procedure.

Sat Jun 15 03:51:19 1996  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* Makefile.in (clean): Add space before \

Wed Jun 12 00:08:31 1996  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* des_int.h: Add missing prototypes; needed to make Win-32
		compiler happy.

	* f_tables.h: Add #ifdef _WIN32 in places where we had #ifdef _MSDOS

Tue May 21 19:30:10 1996  Sam Hartman  <hartmans@mit.edu>

	* Makefile.in (check-unix): In building destest and verify, make
 	sure we include enough object modules to deal with systems that do
 	early binding in shared libs, so we porperly overide
 	mit_des_is_weak_key

	* Makefile.in (check-unix): Use $(RUN_SETUP) so shared lib paths
 	are happy.

Sat May 18 02:02:59 1996  Theodore Y. Ts'o  <tytso@mit.edu>

	* u_nfold.c (mit_des_n_fold): Fix memory leak.  Free tempbuf
		before returning.

Tue May 14 18:59:38 1996  Richard Basch  <basch@lehman.com>

	* des_int.h: the cs_entry routines in cbc_cksum.c are now static.

	* Makefile.in: removed cs_entry.c

	* cbc_cksum.c:
		caller is responsible for allocating cksum->contents
		  and indicate the allocated amount in cksum->length.
		the cs_entry routines are now static and the cs_entry